--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "nectar-web",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "@types/node": "^10.10.3",
+    "@types/webpack-env": "^1.13.6"
+  },
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
-    "@types/node": "^10.10.3",
-    "@types/webpack-env": "^1.13.6",
     "firebase": "^5.3.1",
     "lodash": "^4.17.10",
+    "prettier": "^1.14.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "^2.17.0",
+    "react-scripts": "^2.0.4",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -23,10 +26,16 @@
     "typescript": "^3.0.3"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "deploy": "firebase deploy",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
-  }
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
