--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "build": "react-scripts build",
     "deploy": "firebase deploy",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettify": "prettier 'src/**/*' --write"
   },
   "browserslist": [
     ">0.2%",
