--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "deploy": "firebase deploy",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "prettify": "prettier 'src/**/*' --write"
+    "prettier": "prettier 'src/**/*' --write"
   },
   "browserslist": [
     ">0.2%",
